--- a/cw2/app/templates/book.html
+++ b/cw2/app/templates/book.html
@@ -2,29 +2,57 @@
 
 {% block title %} NXADESIGNS | Book Me {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 <h1> BOOK </h1>
-<div class="form">
-<form action="/book-conf" method="get">
-
-    Name <br>
-    <input type="text"> <br>
-    Email <br>
-    <input type="email" name="" id="">
-    <br>
-    Service required? <br>
-    <label for="logo"><input type="checkbox" name="" id="logo">logo - £60 </label><br>
-    <label for="webDes"><input type="checkbox" name="" id="webDes"> web design - £80 </label><br>
-    <label for="brandKit"><input type="checkbox" name="" id="brandKit"> branding kit - £100 </label><br>
-    <label for="cards"><input type="checkbox" name="" id="cards"> business card printing - £50</label><br>
 <br>
-Any comments or concerns? <br><input type="submit" value = "Book Me">
+<div class="container-fluid px-5">
+    <div class="row">
+        <div class="col-7 text-align-left">
+            <h2>
+                Thank you for sending through an enquiry!
+            </h2>
+            <h5>
+                Please make your input as detailed as possible, as it helps me to have a better understanding of what
+                you're requesting and helps us both in the long run :)
+            </h5>
+            <br>
+            <h3>
+                Also please note that following your booking you will be required to send through a £30 deposit to
+                confirm you wish to proceed with the design process. <span
+                    style="background-color: #ff80ce; color: #131313;">Until this is paid your commission will not be
+                    started</span>
+            </h3>
+            <br><br>
+            <h3>Besitos!</h3>
+            <img src="/static/logo2.png" width="200px" style="
+                position: relative;
+                margin-top: 200px;" alt="">
+        </div>
+        <div class="col-5">
+            <div class="booking">
+                <form action="/book-conf" method="get">
 
-<textarea name="paragraph_text" cols="50" rows="10"></textarea>
-<br>
-</form>
-<!--Hey, enter name
+                    <h5>Name</h5>
+                    <input type="text"> <br><br>
+                    <h5>Email</h5>
+                    <input type="email" name="" id="">
+                    <br><br>
+                    <h5>Service required? </h5>
+                    <label for="logo"><input type="checkbox" name="" id="logo">logo - £60 </label><br>
+                    <label for="webDes"><input type="checkbox" name="" id="webDes"> web design - £80 </label><br>
+                    <label for="brandKit"><input type="checkbox" name="" id="brandKit"> branding kit - £100 </label><br>
+                    <label for="cards"><input type="checkbox" name="" id="cards"> business card printing -
+                        £50</label><br>
+
+                    <h5>Any comments or concerns?</h5>
+
+                    <textarea> </textarea>
+                    <br><br><input type="submit" value="Book Me" class="btn btn-outline-dark align-right">
+                </form>
+
+
+                <!--Hey, enter name
     Thank you for booking me! I really appreciate it, I will process
     your order and get in touch with you soon
 
@@ -32,6 +60,10 @@ Any comments or concerns? <br><input type="submit" value = "Book Me">
 
     Marie | NXADESIGNS
 -->
+            </div>
+        </div>
+    </div>
 </div>
+
 
 {%endblock%}
