--- a/cw2/app/templates/index.html
+++ b/cw2/app/templates/index.html
@@ -10,7 +10,7 @@
         <div class="col-md-5">
 
             <!--centre!-->
-            <p><i>visuals for your vision</i></p>
+            <p><i>VISUALS FOR YOUR VISION</i></p>
             <a class="btn btn-outline-light" href="/book-me">book me</a>
         </div>
 
@@ -25,27 +25,29 @@
 
                 <div class="col-sm-4">
                     <br>
-                    <img src="/static/imgme.jpeg" width="200px" style="border: 2px solid #ffffff;">
+                    <img src="/static/imgme.jpeg" width="250px" style="border: 2px solid #ffffff;">
                 </div>
                 <div class="col-sm-8 p-30">
                     <h1> About the Creative </h1>
                     <div style="text-align: left;">
-                        Marie, also known as <i>RHI</i>, is a graphic designer. A creative genius if you will. Born
+                        Marie, also known as <i>RHI</i>, is a graphic designer. <span
+                            style="background-color: #ff80ce; color: #131313;">A creative genius if you will</span>. Born
                         and raised in London, she knew she was never destined for the life of a tech-fleece babe.
                         Inspired by the "beauty" around her, she decided to
                         develop her own aesthetic. Marie creates visual experiences, not just for the "girl boss
                         CEOs" you see on Instagram. Her goal is to design and create visuals that inspire others to
                         be their authentic selves.
-                        We hope her projects inspire you to create
-                    <br>
-                    (or book her, that works too)
-               <div class="w-20 text-right p-3">
-                        <a href="/portfolio" class="btn btn-outline-light">view portfolio</a>
-                    </div> 
-                </div>
-     
+                        We hope her projects inspire you to <span
+                        style="background-color: #ff80ce; color: #131313;">create and exist as your authentic self</span>
+                        <br>
+                        (or book her, that works too)
+                        <div class="w-20 text-right p-3">
+                            <a href="/portfolio" class="btn btn-outline-light">view portfolio</a>
+                        </div>
+                    </div>
 
-                    
+
+
                 </div>
                 <br>
 
