--- a/cw2/app/templates/shop.html
+++ b/cw2/app/templates/shop.html
@@ -5,82 +5,97 @@
 {% block content %}
 
 <h1> SHOP </h1>
-<div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="container shop">
+    <div class="row row-cols-1 row-cols-md-3 g-8 gy-5 py-1">
         <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
         <div class="col">
             <a href="/port-miakrylics">
                 <div class="card">
-                    <img src="/static/crzn/hoodie01.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">corazon hoodie 1 - £40</h5>
-                        <p class="card-text">
-                        </p>
+                    <img src="/static/crzn/hoodie01.jpg" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">BUY NOW</h1>
                     </div>
                 </div>
-            </a> <i>add to basket</i>
-        </div>
-        <div class="col">
-            <a href="/port-corazon">
-                <div class="card">
-                    <img src="/static/crzn/hoodie02.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">CORAZON hoodie 2 - 40£</h5>
-                    </div>
-                </div>
-            </a> <i>add to basket</i>
+            </a> 
+            <br>
+            <h4>CORAZON HOODIE FIRST EDITION</h4>
+            <h5><i>£60</i></h5>
 
         </div>
+        <br>
+        <div class="col">
+            <a href="/port-miakrylics" >
+                <div class="card">
+                    <img src="/static/crzn/hoodie02.jpg" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">BUY NOW</h1>
+                    </div>
+                </div>
+            </a> 
+            <br>
+            <h4>CORAZON HOODIE SECOND EDITION</h4>
+            <h5><i>£60</i></h5>
+
+        </div>
+        <br>
+
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="static/crzn/tee03.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">corazon Tee 3 - £40</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                    <img src="static/crzn/tee03.jpg" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">BUY NOW</h1>
                     </div>
                 </div>
             </a>
-            <i>add to basket</i>
+            <br>
+            <h4>CORAZON T-SHIRT FIRST EDITION</h4>
+            <h5><i>£60</i></h5>
+
         </div>
+        <br>
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="/static/mandala.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">poster 1 - £40</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                    <img src="/static/crznposter.jpg" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">BUY NOW</h1>
                     </div>
                 </div>
             </a>
-            <i>add to basket</i>
+            <br>
+            <h4>CORAZON POSTER FIRST EDITION</h4>
+            <h5><i>£20</i></h5>
         </div>
+        <br>
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="static/brwn.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">poster 2</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                    <img src="/static/brwn.jpg" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">BUY NOW</h1>
                     </div>
                 </div>
-            </a> <i>add to basket</i>
+            </a> 
+            <br>
+            <h4>BRWNSUGAR POSTER</h4>
+            <h5><i>£10</i></h5>
+
         </div>
+        <br>
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="/static/union.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">poster 3</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content.</p>
+                    <img src="/static/union.jpg" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">BUY NOW</h1>
                     </div>
                 </div>
             </a>
-            <i>add to basket</i>
+            <br>
+            <h4>BLISS POSTER</h4>
+            <h5><i>£20</i></h5>
+
         </div>
     </div>
 </div>
