--- a/cw2/app/static/styles.css
+++ b/cw2/app/static/styles.css
@@ -18,19 +18,22 @@ this is perfect if you want to put the footer at the actual bottom
 
 .navbar-custom li a, .navbar-brand{
     color: #ffffff;
+    height: 30px;
     }
 /*read on css editting and how to layer selectors!*/
 
-.navbar a:hover { 
+.navbar a:hover, a:hover { 
     color: #ff99d4
     !important; }
 
+    a{
+        color: #131313;
+    }
 
 main{
     position: relative;
     padding: 0 0px;
-    height: 85vh;
-    width: 100%;
+    min-height: 85vh;
 
 }
 /*so text doesn't hit the ends of the page*/
@@ -39,42 +42,68 @@ main{
     margin-top: 50px;
 }
 
+.shop .card{
+border-radius: 0%; 
+    max-width:440px;
+    height: 584px;
+    
+}
+
+.port .card{
+    max-width: 440px;
+    height: 550px;
+}
+
+.card img{
+   width: 100%;
+    height: 100%;
+}
+
+.hvr:hover{
+    opacity: 30%;
+ }
+
+ .overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0%;
+    width: 100%;
+    height: 100%;
+ }
+ .overlay:hover{
+    opacity: 100%;
+    background-color: #131313e1;
+    color:#ffffff
+ }
+
+ .ovr{
+    margin-top: 200px;
+    text-align: center;
+
+ }
+
+/*very useful footer here*/
 footer{
     position: relative;
     bottom: 0;
     background-color: #ffffff;
-    padding: 10px;
+    padding: 0px;
     color: #303030;
     width: 100%;
-    height: 3rem;
+    height: 3.5rem;
     text-align: center;
     margin: 0px;
 }
 
-
-/*very useful footer here*/
-
-.resize{
-    width: 100%; /* width of container */
-    height: 200px; /* height of container */
-    object-fit: cover;
-    object-position: 20% 10%;
-}
-/*for putting images in the card sections*/
-
-.addVals{
-    width: 650px;
+.booking{
+    max-width: 600px;
     height: 100%;
     background-color: #ffffff;
-    color: #303030;
+    color: #131313;
     margin: auto;
-    margin-top: 30px;
     text-align: left;
-    padding: 15px;
+    padding: 30px;
 }
-/*form design for adding expenses etc*/
-
-input[type=text]{
-    width: 400px;
-}
-/*resizing the input boxes, note the [type=text]!!*/
