--- a/cw2/app/templates/base.html
+++ b/cw2/app/templates/base.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid navbar-custom">
-      <a class="navbar-brand " href="/">NXADESIGNS!</a>
+      <a class="navbar-brand " href="/"><img src="/static/logo.png" width="150px" alt=""></a>
       <button class="navbar-toggler" style="background-color: #ffffff;" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
-            <a class="nav-link " aria-current="page" href="/">Home</a>
+            <a class="nav-link " href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="/portfolio">Portfolio</a>
@@ -31,7 +31,7 @@
             <a class="nav-link " href="/book-me">BOOK</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="/shop">MERCH</a>
+            <a class="nav-link " href="/shop">SHOP</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " href="/admin">*admin*</a>
@@ -42,11 +42,12 @@
     </div>
   </nav>  <hr>
 
-  <main>{% block content%} 
-    {% endblock %}
+  <main>    
+      {% block content%}
+      {% endblock %}
   </main>
   
-  <footer>
+  <footer class="footer mt-auto py-3">
     insta - <a href="https://www.instagram.com/nxadesigns/"><b>@nxadesigns</b></a>
     email - <a href="mailto:nxadesigns1@gmail.com"> <b>nxadesigns1@gmail.com</b> </a>
     <br>
