--- a/cw2/app/templates/portfolio.html
+++ b/cw2/app/templates/portfolio.html
@@ -6,46 +6,48 @@
 
 <h1> PORTFOLIO </h1>
 
-    <div class="container">
+    <div class="container port">
       <div class="row row-cols-1 row-cols-md-3 g-4">
           <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
           <div class="col">
             <a href="/port-miakrylics">
                 <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">MIAKRYLICS</h5>
-                    <p class="card-text">
-                      I would love to lie and say this was my first project ever. It wasn't, but it was really interesting. Click here to check it out
-                    </p>
-                  </div>
+                    <img src="/static/weLit/zineCvr.png" class="card-img-top hvr" alt="...">
+                    <div class="overlay">
+                        <h1 class="ovr">Streets said this was my best work yet</h1>
+                    </div>
                 </div>
-            </a>
-            <i>MIAKRYLICS</i>
-          </div>
-          <div class="col">
-            <a href="/port-corazon">
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">CORAZON</h5>
+            </a> 
+            <br>
+            <h4>WeLit Entertainment</h4>
+
+        </div>
+        <div class="col">
+          <a href="/port-miakrylics">
+              <div class="card">
+                  <img src="/static/abfinals/bwCvr.jpg" class="card-img-top hvr" alt="...">
+                  <div class="overlay">
+                      <h1 class="ovr">Streets said this was my best work yet</h1>
                   </div>
+              </div>
+          </a> 
+          <br>
+          <h4>ABSTUDIO</h4>
+
+      </div>
+      <div class="col">
+        <a href="/port-miakrylics">
+            <div class="card">
+                <img src="/static/mkVis/3b.jpg" class="card-img-top hvr" alt="...">
+                <div class="overlay">
+                    <h1 class="ovr">Streets said this was my best work yet</h1>
                 </div>
-            </a>
-            <i>CORAZON</i>
-          </div>
-          <div class="col">
-            <a href="/port-abstudio">
-                <div class="card">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">ABSTUDIO</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                </div>
-            </a>
-            <i>ABSTUDIO</i>
-          </div>
+            </div>
+        </a> 
+        <br>
+        <h4>WeLit Entertainment</h4>
+
+    </div>
         </div>
     </div>
 
