--- a/cw2/app/templates/portfolio.html
+++ b/cw2/app/templates/portfolio.html
@@ -2,53 +2,64 @@
 
 {% block title %} NXADESIGNS | Portfolio{% endblock %}
 
-{% block content %} 
+{% block content %}
 
 <h1> PORTFOLIO </h1>
+<p>
 
-    <div class="container port">
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-          <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
-          <div class="col">
-            <a href="/port-miakrylics">
-                <div class="card">
-                    <img src="/static/weLit/zineCvr.png" class="card-img-top hvr" alt="...">
-                    <div class="overlay">
-                        <h1 class="ovr">Streets said this was my best work yet</h1>
-                    </div>
-                </div>
-            </a> 
-            <br>
-            <h4>WeLit Entertainment</h4>
+<div class="container">
+  <div class="d-flex justify-content-center">  <div class="w-50 border py-1">
 
+    <i>Streets said this is some of my best work yet. Some of these passion projects, some of them
+        commission. All of them exquisite</i>
+  </div>
+</div>
+</div>
+</p>
+<br>
+<div class="container port">
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
+    <div class="col">
+      <a href="/port-weLit">
+        <div class="card">
+          <img src="/static/weLit/zineCvr.jpg" class="card-img-top hvr" alt="...">
+          <div class="overlay">
+            <h1 class="ovr">Streets said this was my best work yet</h1>
+          </div>
         </div>
-        <div class="col">
-          <a href="/port-miakrylics">
-              <div class="card">
-                  <img src="/static/abfinals/bwCvr.jpg" class="card-img-top hvr" alt="...">
-                  <div class="overlay">
-                      <h1 class="ovr">Streets said this was my best work yet</h1>
-                  </div>
-              </div>
-          </a> 
-          <br>
-          <h4>ABSTUDIO</h4>
-
-      </div>
-      <div class="col">
-        <a href="/port-miakrylics">
-            <div class="card">
-                <img src="/static/mkVis/3b.jpg" class="card-img-top hvr" alt="...">
-                <div class="overlay">
-                    <h1 class="ovr">Streets said this was my best work yet</h1>
-                </div>
-            </div>
-        </a> 
-        <br>
-        <h4>WeLit Entertainment</h4>
+      </a>
+      <br>
+      <h4>WeLit Entertainment</h4>
 
     </div>
+    <div class="col">
+      <a href="/port-abstudio">
+        <div class="card">
+          <img src="/static/abfinals/bwCvr.jpg" class="card-img-top hvr" alt="...">
+          <div class="overlay">
+            <h1 class="ovr">Streets said this was my best work yet</h1>
+          </div>
         </div>
+      </a>
+      <br>
+      <h4>ABSTUDIO</h4>
+
     </div>
+    <div class="col">
+      <a href="/port-miakrylics">
+        <div class="card">
+          <img src="/static/mkVis/3b.jpg" class="card-img-top hvr" alt="...">
+          <div class="overlay">
+            <h1 class="ovr">Streets said this was my best work yet</h1>
+          </div>
+        </div>
+      </a>
+      <br>
+      <h4>WeLit Entertainment</h4>
+
+    </div>
+  </div>
+</div>
 
 {%endblock%}
